syntax = "proto3";

option go_package = "aresdata/api/v1;v1";

// 分页请求
message PageRequest {
  int64 page = 1; // 页码
  int64 size = 2; // 每页数量
}

// 分页响应
message PageResponse {
  int64 total = 1; // 总记录数
}
